--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,9 +8,9 @@ COPY prisma ./prisma
 RUN npm install
 
 COPY . ./
-#RUN npx migrate dev
-RUN npx prisma generate 
-RUN npx prisma migrate deploy --name init
+
+# RUN npx prisma generate 
+# RUN npx prisma migrate deploy 
 RUN npm run build
 
 EXPOSE 3000
