--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
