--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ RUN npm install
 COPY . ./
 #RUN npx migrate dev
 RUN npx prisma generate 
-RUN npx prisma migrate deploy --name init
+#RUN npx prisma migrate deploy
 RUN npm run build
 
 EXPOSE 3000
